# labs

./: .dockerignore  .env.sample  .gitignore  .infisical.json  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  asgi_app.py  calculate_sum.py  calculator.py  class_diagram_script.py  code_monkey.py  database.ini  docker-compose.devcontainer.yml  docker-compose.yml  environment.yml  litellm-config.yaml  manage.py  middleman_functions.py  new_issue_1721038909.py  new_issue_1721040052.py  promtail.yml  pyproject.toml  pytest.ini  run.py  test.ipynb  test_calculator.py  test_llms.py  testing.ipynb  vector.py
.devcontainer/: devcontainer.json  install.sh  login.sh
.github/workflows/: ci_cd.yml
Docs/: RAG-diagram.txt  README.md
code_examples/: calculator.py  test_calculator.py
code_examples/tests/: test_calculator.py
config/: admin.py  configuration_variables.py  lite_llm_database_config.py  models.py  settings.py  urls.py
config/app/: admin.py  models.py
config/config/: settings.py
config/fixtures/: config.json
config/migrations/: 0001_initial.py  0002_rename_config_conf_config__4d9363_idx_config_conf_key_45248a_idx_and_more.py
config/models/: config.py
database_scripts/: postgres.sql  test.sql
doc/: results.md
doc/diagram/: class_diagram  class_diagram_script.py
docs/: llm_comparison.md  mkdocs.yml  prompt_examples.md  rag.md  rag_advanced_techniques.md  rd.md
docs/diagram/: class_diagram  class_diagram_script.py
docs/docs/: index.md
labs/: __init__.py  admin.py  asgi.py  celery.py  config.py  context_loading.py  dataset.py  decorators.py  features.py  file_handler.py  file_handling.py  fnmatch.py  github_test.py  llm.py  logger.py  middleware.py  models.py  nlp.py  plots.py  pytest.ini  repo.py  run.py  settings.py  setup.py  setup_spacy.py  urls.py  wsgi.py
labs/api/: __init__.py  codemonkey_endpoints.py  github_endpoints.py  main.py  schemas.py  types.py
labs/autogen/: autogen_test.py
labs/config/: asgi.py  celery.py  configuration_variables.py  litellm.yaml  logger.py  ninja.py  redis_client.py  settings.py  urls.py
labs/core/: admin.py  factories.py  forms.py  groups.py  mixins.py  models.py
labs/database/: connect.py  embeddings.py  models.py  queries.py  vectorize.py  vectorize_to_db.py
labs/database_/: models.py
labs/embeddings/: apps.py  base.py  embedder.py  factories.py  gemini.py  models.py  ollama.py  openai.py
labs/fixtures/: config.json  embedding.json  llm.json  llm_configs.json  model.json  prompt.json  variable.json  vectorizer_model.json
labs/github/: __init__.py  get_issue.py  get_issues_from_repo.py  github.py  load_access_data.py
labs/litellm_service/: llm_requester.py  local.py  ollama.py  openai.py  request.py
labs/llm/: anthropic.py  checks.py  context.py  gemini.py  ollama.py  openai.py  prompt.py
labs/migrations/: 0001_initial.py
labs/modeling/: predict.py  train.py
labs/parsers/: python.py  response.py  response_parser.py
labs/rag/: embeddings.py
labs/tasks/: __init__.py  (+7 more)
litellm_service/: docker-compose.yml  litellm-config.yaml  request.py
notebooks/: Start_working_with_LLMs.ipynb  embeddings.ipynb  embeddings_exploring.ipynb  embeddins.ipynb  embeddins_exploring.ipynb  qwen+nomic.ipynb  sample.ipynb  starcoder2+nomic.ipynb
pgvector/: add_data.py  add_test_data.py  config.py  connect.py  queries.py  test_db.py  vectorize_to_db.py
rag/: embeddings.py  rag.py  test_queries.py  test_rag.py
src/: middleware.py
tests/: conftest.py  constants.py  test_GithubRequests.py  test_api.py  test_codemonkey_endpoints.py  test_github_requests.py  test_llm.py  test_local_llm.py  test_middleman.py  test_middleware.py  test_python_parser.py
vector/: add_test_data.py  connect.py  queries.py  test_add_test_data.py  test_queries.py  vector_config.py  vectorize_to_db.py
(+89 files in other folders)
