[tool.poetry]
name = "labs"
version = "0.1.0"
description = ""
authors = [
    "Carlos Martinez <c.martinez@runtime-revolution.com>",
    "Filipa Silva <filipa.silva@runtime-revolution.com>",
    "Luis Moreira <l.moreira@runtime-revolution.com>",
    "Sérgio Ildefonso <s.ildefonso@runtime-revolution.com>"
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11.7"
python-dotenv = "^1.0.1"
requests = "^2.32.3"
transformers = "^4.42.4"
litellm = "^1.41.25"
gitpython = "^3.1.43"
python-json-logger = "^2.0.7"
pathspec = "^0.12.1"
pgvector = "^0.3.2"
pytest-postgresql = "^6.0.0"
fastapi = "^0.111.1"
pandas = "^2.2.2"
langdetect = "^1.0.9"
psycopg2-binary = "^2.9.9"
psycopg = {extras = ["binary"], version = "^3.2.2"}
pydantic = "^2.9.2"
sqlalchemy = "^2.0.35"
langchain = "^0.3.0"
langchain-community = "^0.3.0"
celery = "^5.4.0"
celery-redbeat = "^2.2.0"
redis = "^5.1.0"
ollama = "^0.3.3"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.8.0"
ruff = "^0.6.2"
ipykernel = "^6.29.5"
jupyterlab = "^4.2.4"
vcrpy = "^6.0.1"
pytest = "^8.3.2"
pytest-mock = "^3.14.0"
pytest-dotenv = "^0.5.2"
ipython = "^8.27.0"
jupyter = "^1.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
